--- a/styler.css
+++ b/styler.css
@@ -140,7 +140,7 @@ h1 {
 .logo
 {
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 2rem;
     margin-left: -2em;
 }
