--- a/styler.css
+++ b/styler.css
@@ -111,7 +111,7 @@ header {
 li a {
     list-style-type: none;
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
     display: block;
     padding: 10px;
